--- a/application.yml
+++ b/application.yml
@@ -2,4 +2,8 @@ eureka:
   instance:
     hostname: localhost
     ip-address: true
-
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+  server:
+    waitTimeInMsWhenSyncEmpty: 0
