--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,1 +1,12 @@
-
+spring:
+  application:
+    name: config-dev
+eureka:
+  instance:
+    hostname: localhost
+    ip-address: true
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+  server:
+    waitTimeInMsWhenSyncEmpty: 0
