--- a/application.yml
+++ b/application.yml
@@ -8,5 +8,7 @@ eureka:
   client:
     fetchRegistry: true
     registerWithEureka: true
+    service-url:
+      defaultZone: http://localhost:8761/
   server:
     waitTimeInMsWhenSyncEmpty: 0
