--- a/application.yml
+++ b/application.yml
@@ -9,6 +9,6 @@ eureka:
     fetchRegistry: true
     registerWithEureka: true
     service-url:
-      defaultZone: http://localhost:8761/
+      defaultZone: http://localhost:8761/eureka
   server:
     waitTimeInMsWhenSyncEmpty: 0
