--- a/application.yml
+++ b/application.yml
@@ -8,7 +8,7 @@ eureka:
   client:
     fetchRegistry: true
     registerWithEureka: true
-    service-url:
+    service-uri:
       defaultZone: http://localhost:8761/eureka
   server:
     waitTimeInMsWhenSyncEmpty: 0
